# grimoirelab-sirmordred

./: .flake8  .gitignore  .travis.yml  AUTHORS  Getting-Started.md  NEWS  README.md  VizGrimoireUtils  aliases.json  docker-compose.yml  githubsync.py  grimoire_elk  main.py  menu.yaml  mordred.py  perceval_backends.py  pyproject.toml  report  requirements.txt  requirements_dev.txt  run  setup.py
.github/workflows/: changelog.yml  ci.yml  release.yml  tests.yml
doc/: config.md
docker/: Dockerfile  README.md  cacert.pem  stage
docker/attic/: Dockerfile  docker-compose.yml  gen.sh
docker/example_conf/: projects.json  requirements.cfg  setup.cfg
docker/unified_releases/: arthur.alpha  arthur.beta  dagger.alpha.1
mordred/: _version.py  config.py  eclipse_projects_lib.py  error.py  github.py  githubsync.py  mordred.py  task.py  task_collection.py  task_enrich.py  task_identities.py  task_manager.py  task_panels.py  task_projects.py  task_report.py  task_track.py
releases/: 0.10.0-rc.1.md  0.10.0.md  0.10.1-rc.1.md  0.10.1.md  0.10.10-rc.1.md  0.10.10.md  0.10.11-rc.1.md  0.10.11.md  0.10.2-rc.1.md  0.10.2.md  0.10.3-rc.1.md  0.10.3.md  0.10.4-rc.1.md  0.10.4.md  0.10.5-rc.1.md  0.10.5.md  0.10.6-rc.1.md  0.10.6.md  0.10.7-rc.1.md  0.10.7.md  0.10.8-rc.1.md  0.10.8.md  0.10.9-rc.1.md  0.10.9.md  0.3.0.md  0.3.1.md  0.4.0-rc.1.md  0.4.0.md  0.4.1.md  0.5.0-rc.1.md  0.5.0-rc.2.md  0.5.0.md  0.5.1.md  0.6.0-rc.1.md  0.6.0-rc.2.md  0.6.0-rc.3.md  0.6.0-rc.4.md  0.6.0.md  0.6.1.md  0.7.0-rc.1.md  (+84 more)
releases/unreleased/: [git]-pair-programming-activation-fixed.yml  [task_enrich]-the-alias-configuration-file-now-includes-the-study-names.yml  add-extract-spaces.yml  add-pair-programming-in-'_get_enrich_backend'-method.yml  add-studies-to-the-alias-file.yml  github-pull-request-aliases-added.yml  grimoirelab-dependencies-update.yml  include-requirements-for-development.yml  periodic-autorefresh-not-working.yml  sortinghat-mandatory-parameters.yml  studies-aliases-relocated.yml  study-selection-fixed.yml  tasks-not-requiring-sortinghat-fixed.yml
releases/unreleased/processed/: days-in-collection-spent-time.yml  identity-refresh-bug-for-some-items.yml  log-format-updated-with-the-mordred-project-name.yml  missing-parameters-for-sortinghat.yml  optional-configuration-for-sortinghat.yml  race-condition-initializing-sirmordred.yml  reduced-the-number-of-connections-to-sortinghat.yml  refresh-identities-in-a-shorter-period.yml  sirmordred-logs-available-on-console.yml  sortinghat-database-changed.yml  sortinghat-option-to-verify-ssl.yml
sirmordred/: __init__.py  _version.py  config.py  eclipse_projects_lib.py  error.py  github.py  sirmordred.py  task.py  task_autorefresh.py  task_collection.py  task_enrich.py  task_identities.py  task_manager.py  task_panels.py  task_projects.py  task_report.py  task_track.py
sirmordred/utils/: find_affiliation_conflicts.py  grimoirelab_valid.yml  micro.py  panels_config.py  projects.json  projects_json2yml.py  setup.cfg
tests/: aliases.json  archive-test-projects.json  archive-test.cfg  archives-test-projects.json  archives-test.cfg  menu.yaml  run_tests.py  sortinghat_settings.py  test-archive.cfg  test-bad-study.cfg  test-no-collection.cfg  test-no-sh.cfg  test-no-study.cfg  test-projects-archive.json  test-projects-no-collection.json  test-projects.json  test-repos-projects.json  test-repos.cfg  test.cfg  test_config.py  test_credentials.cfg  test_enrich_all.py  test_github.py  test_githubsync.py  test_healthcheck.py  test_sirmordred.py  test_studies.cfg  test_task.py  test_task_autorefresh.py  test_task_collection.py  test_task_enrich.py  test_task_identities.py  test_task_manager.py  test_task_panels.py  test_task_projects.py  test_wrong.cfg
tests/archives/: askbot.archive  bugzilla.archive  bugzillarest.archive  confluence.archive  discourse.archive  dockerhub.archive  functest.archive  gerrit.archive  github.archive  gitlab-issue.archive  gitlab-merge.archive  gitlab.archive  googlehits.archive  jenkins.archive  jira.archive  launchpad.archive  mediawiki-1.23.archive  mediawiki-1.28.archive  meetup.archive  mozillaclub.archive  nntp.archive  phabricator.archive  redmine.archive  remo.archive  rss.archive  slack.archive  stackexchange.archive  telegram.archive  twitter.archive
tests/data/: healthcheck_cache_invalid.json  healthcheck_cache_valid.json  healthcheck_cache_wrong_key.json  orgs_sortinghat.json  perceval_identities_sortinghat.json  remote_identities_sortinghat.json  task-params-expected  task-params-test-projects.json  task-params-test.cfg  url-projects.json
utils/: cfg_generator  find_affiliation_conflicts.py  github2projectsfiles.py  healthcheck.py  menu.yaml  micro-mordred.py  micro.py  projects.json  projects_json2yml.py  setup.cfg  sir.py
utils/settings/: projects.cfg  projects.json
