[tool.poetry]
name = "sirmordred"
version = "1.1.10"
description = "Drive GrimoireLab tools to produce a dashboard"
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-sirmordred"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "sirmordred" },
    { include = "tests", format = "sdist" },
]

classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-sirmordred/issues"

[tool.poetry.scripts]
'sirmordred' = 'sirmordred.bin.sirmordred:main'
'healthcheck.py' = 'sirmordred.utils.healthcheck:main'
'micro.py' = 'sirmordred.utils.micro:main'
'panels_config.py' = 'sirmordred.utils.panels_config:main'

[tool.poetry.dependencies]
python = "^3.9"

colorlog = "^6.4.1"
elasticsearch = "6.3.1"
elasticsearch-dsl = "6.3.1"
file-read-backwards = "^3.1.0"
grimoirelab-toolkit = { version = ">=0.3", allow-prereleases = true}
sortinghat = { version = ">=0.7.20", allow-prereleases = true}
kidash = { version = ">=0.5", allow-prereleases = true}
grimoire-elk = { version = ">=0.102", allow-prereleases = true}
grimoirelab-panels = { version = ">=0.1", allow-prereleases = true}
perceval = { version = ">=0.19", allow-prereleases = true }
perceval-mozilla = { version = ">=0.3", allow-prereleases = true}
perceval-opnfv = { version = ">=0.2", allow-prereleases = true}
perceval-puppet = { version = ">=0.2", allow-prereleases = true}
perceval-weblate = { version = ">=0.2", allow-prereleases = true}
cereslib = { version = ">=0.3", allow-prereleases = true}
graal = { version = ">=0.3", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
httpretty = "^1.1.4"
flake8 = "^7.1.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
