#
# Test config with only git and github activated
#


# Config values format
#
# List: [val1, val2 ...]
# Int: int_value
# Int as string: "Int"
# List as string: "[val1, val2 ...]"
# String: string_value
# None: None, none
# Boolean: true, True, False, false

[general]
short_name = Grimoire
update = false
min_update_delay = 10
debug = true
# /var/log/mordred/
logs_dir = logs
# Number of items per bulk request to Elasticsearch
bulk_size = 100
# Number of items to get from Elasticsearch when scrolling
scroll_size = 100

[projects]
projects_file = ./projects.json

[es_collection]
arthur = true
arthur_url = http://127.0.0.1:8080
redis_url = redis://localhost/8
url = https://admin:admin@localhost:9200

[es_enrichment]
url = https://admin:admin@localhost:9200

[sortinghat]
host = 127.0.0.1
user = root
password =
database = test_sh
load_orgs = true
orgs_file = data/orgs_sortinghat.json
identities_api_token = 'xxxx'
identities_file = [data/perceval_identities_sortinghat.json]
affiliate = true
# commonly: Unknown
unaffiliated_group = Unknown
autoprofile = [customer,git,github]
matching = [email]
sleep_for = 120
# sleep_for = 1800
bots_names = [Beloved Bot]

[panels]
kibiter_time_from= "now-30y"
kibiter_default_index= "gitlab"
kibiter_url = http://localhost:5601
community = true
gitlab-issues = true
gitlab-merges = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_chaoss_180804
enriched_index = git_chaoss_180804_enriched_180804
latest-items = true
category = commit
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[github:issue]
raw_index = github_issues_chaoss_180804
enriched_index = github_issues_chaoss_180804_enriched_180804
api-token = xxxx
sleep-for-rate = true
no-archive = true
category = issue
sleep-time = 300

[github:pull]
raw_index = github_pulls_chaoss_180804
enriched_index = github_pulls_chaoss_180804_enriched_180804
api-token = xxxx
sleep-for-rate = true
no-archive = true
category = pull_request
sleep-time = 300
studies = [enrich_onion:github]

[enrich_demography:git]
date_field = utc_commit
author_field = author_uuid

[enrich_areas_of_code:git]
#no_incremental = true
in_index = git_chaoss_180804
out_index = git-aoc_chaoss_enriched_180804

[enrich_onion:git]
in_index = git_chaoss_180804_enriched_180804
out_index = git-onion_chaoss_enriched_180804
contribs_field = hash
no_incremental = false

[enrich_onion:github]
#no_incremental = true
in_index_iss = github_issues_chaoss_180804_enriched_180804
in_index_prs = github_pulls_chaoss_180804_enriched_180804
out_index_iss = github_issues_onion-enriched_180804
out_index_prs = github_prs_onion-enriched_180804
data_source_iss = github-issues
data_source_prs = github-prs

[jenkins]
raw_index = jenkins_test-raw
enriched_index = jenkins_test

[gitlab:issue]
raw_index = test_gitlab-issue-raw
enriched_index = test_gitlab-issue
api-token = nsTwsxkTbnoJBbY3pC43
no-archive = true
sleep-for-rate = true

[gitlab:merge]
raw_index = test_gitlab-merge-raw
enriched_index = test_gitlab-merge
api-token = nsTwsxkTbnoJBbY3pC43
no-archive = true
category = merge_request
sleep-for-rate = true
