[general]
short_name = Grimoire
update = true
debug = true
logs_dir = /home/bitergia/logs

[projects]
projects_file = /home/bitergia/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
# Refresh identities and projects for all items after enrichment
autorefresh = false
studies = true

[sortinghat]
host = mariadb
user = root
password =
database = grimoire_sh
load_orgs = true
orgs_file = /home/bitergia/conf/orgs_file.json
#matching  see: sortinghat unify --help
matching = email-name, github
autoprofile = git, github
sleep_for = 120
bots_names =

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_grimoire_161116
enriched_index = git_grimoire_161116_enriched_161209b

[github]
raw_index = github_grimoire_161116
enriched_index = github_grimoire_161116_enriched_161123a
backend-token = [your GitHub token]

[stackexchange]
raw_index = stackexchange_raw
enriched_index = stackexchange_enriched
token = [your stackexchange token]

