#
# Test config with only git and github activated
#


# Config values format
#
# List: [val1, val2 ...]
# Int: int_value
# Int as string: "Int"
# List as string: "[val1, val2 ...]"
# String: string_value
# None: None, none
# Boolean: true, True, False, false

[general]
short_name = Grimoire
update = false
min_update_delay = 10
debug = true
# /var/log/mordred/
logs_dir = logs
# Number of items per bulk request to Elasticsearch
bulk_size = 100
# Number of items to get from Elasticsearch when scrolling
scroll_size = 100
menu_file = ../../menu.yaml
aliases_file = ../../aliases.json

[projects]
projects_file = ./projects.json

[es_collection]
# arthur = true
# arthur_url = http://127.0.0.1:8080
# redis_url = redis://localhost/8
url = https://admin:admin@localhost:9200

[es_enrichment]
url = https://admin:admin@localhost:9200

[sortinghat]
host = 127.0.0.1
user = root
password =
port = 8000
path = api/
ssl = false
database = test_sh
affiliate = true
# commonly: Unknown
unaffiliated_group = Unknown
autoprofile = [customer,git,github]
matching = [email]
sleep_for = 120

[panels]
kibiter_time_from= "now-30y"
kibiter_default_index= "git"
kibiter_url = http://admin:admin@localhost:5601
community = true
gitlab-issues = true
gitlab-merges = true
github-repos = true
code-license = true
code-complexity = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_chaoss
enriched_index = git_chaoss_enriched
latest-items = true
category = commit
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[github]
raw_index = github_issues_chaoss
enriched_index = github_issues_chaoss_enriched
api-token = xxxx
sleep-for-rate = true
no-archive = true
category = issue
sleep-time = 300

[github:pull]
raw_index = github_pulls_chaoss
enriched_index = github_pulls_chaoss_enriched
api-token = xxxx
sleep-for-rate = true
no-archive = true
category = pull_request
sleep-time = 300
studies = [enrich_onion:github]

[github:repo]
raw_index = github_pulls_chaoss
enriched_index = github_repo_enriched
category = repository
no-archive = true

[enrich_demography:git]
date_field = utc_commit
author_field = author_uuid

[enrich_areas_of_code:git]
#no_incremental = true
in_index = git_chaoss
out_index = git-aoc_chaoss_enriched

[enrich_onion:git]
in_index = git_chaoss_enriched
out_index = git-onion_enriched
contribs_field = hash
no_incremental = false

[enrich_onion:github]
#no_incremental = true
in_index_iss = github_issues_chaoss_enriched
in_index_prs = github_pulls_chaoss_enriched
out_index_iss = github_issues_onion-enriched
out_index_prs = github_prs_onion-enriched
data_source_iss = github-issues
data_source_prs = github-prs

[jenkins]
raw_index = jenkins_raw
enriched_index = jenkins_enriched
no-archive = true

[gitlab:issue]
raw_index = test_gitlab-issue-raw
enriched_index = test_gitlab-issue
api-token = xxxx
no-archive = true
sleep-for-rate = true

[gitlab:merge]
raw_index = test_gitlab-merge-raw
enriched_index = test_gitlab-merge
api-token = xxxx
no-archive = true
category = merge_request
sleep-for-rate = true

[cocom]
raw_index = cocom_chaoss
enriched_index = cocom_chaoss_enrich
category = code_complexity_lizard_file
studies = [enrich_cocom_analysis]
branches = master

[enrich_cocom_analysis]
out_index = cocom_chaoss_study
interval_months = [3]

[colic]
raw_index = colic_chaoss
enriched_index = colic_chaoss_enrich
category = code_license_nomos
studies = [enrich_colic_analysis]
exec-path = /home/slimbook/Escritorio/sources/graal-libs/nomossa
branches = master

[enrich_colic_analysis]
out_index = colic_chaoss_study
interval_months = [6]
